frontend/tests/cases/positive/synInterfaceAppliedKind.gr
-- 'Interval Nat' is a kind application, which
-- should be syntactically correct
interface Simple a (b : Interval Nat)
