frontend/tests/cases/negative/notInScopeTyVarInInterface2.gr
interface Simple a where
  simple : a -> a

-- 'a' is unbound
interface Simple2 b where
  simple : a -> b
